fix toList issue related to jdk11