@@ -162,7 +162,7 @@ public class AttachmentsRestService implements ResourceContainer {
         attachmentsEntities = attachments.stream()
                                          .map(attachment -> EntityBuilder.fromAttachment(identityManager, attachment))
                                          .filter(attachmentEntity -> attachmentEntity.getAcl().isCanView())
-                                         .toList();
+                                         .collect(Collectors.toList());;
       }
       return Response.ok(attachmentsEntities).build();
     } catch (IllegalAccessException e) {
